# matrixpacked

./: CHANGELOG.md  Cargo.toml  EXAMPLE_COVERAGE.md  LICENSE-MIT  NALGEBRA_INTEROP.md  NON_LAPACK_EXAMPLES.md  OPERATIONS.md  PACKED_LAPACK_FUNCTIONS.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.1.0.md  TESTING.md  cargo  scripts_run_lapack_examples.bat  scripts_run_lapack_examples.sh  scripts_run_nonlapack_examples.bat  scripts_run_nonlapack_examples.sh
docs/: crate.md
examples/: blas_hermitian_c32_hpr.rs  blas_hermitian_c32_hpr2.rs  blas_hermitian_c64_hpr.rs  blas_hermitian_c64_hpr2.rs  blas_symmetric_f32_spr.rs  blas_symmetric_f32_spr2.rs  blas_symmetric_f64_spr.rs  blas_symmetric_f64_spr2.rs  factor_diagnostics_hermitian_c64.rs  factor_diagnostics_spd_f32.rs  factor_diagnostics_symmetric_f64.rs  factor_diagnostics_triangular_c32.rs  hermitian.rs  lapack_hermitian_c32_hpcon.rs  lapack_hermitian_c32_hpev.rs  lapack_hermitian_c32_hpevd.rs  lapack_hermitian_c32_hpgst.rs  lapack_hermitian_c32_hpgv.rs  lapack_hermitian_c32_hpmv.rs  lapack_hermitian_c32_hprfs.rs  lapack_hermitian_c32_hpsv.rs  lapack_hermitian_c32_hpsvx.rs  lapack_hermitian_c32_hptrd.rs  lapack_hermitian_c32_hptrf.rs  lapack_hermitian_c32_hptri.rs  lapack_hermitian_c32_hptrs.rs  lapack_hermitian_c32_upmtr_left.rs  lapack_hermitian_c64_hpcon.rs  lapack_hermitian_c64_hpev.rs  lapack_hermitian_c64_hpevd.rs  lapack_hermitian_c64_hpevx_index.rs  lapack_hermitian_c64_hpevx_value.rs  lapack_hermitian_c64_hpgst.rs  lapack_hermitian_c64_hpgv.rs  lapack_hermitian_c64_hpgvd.rs  lapack_hermitian_c64_hpgvx.rs  lapack_hermitian_c64_hpmv.rs  lapack_hermitian_c64_hprfs.rs  lapack_hermitian_c64_hpsv.rs  lapack_hermitian_c64_hpsvx.rs  (+176 more)
prompts/: PROMPT_00.md  PROMPT_01.md  PROMPT_02.md  PROMPT_03.md  PROMPT_04.md
prompts_docs/: 01-warning-audit-and-cleanup.md  02-document-all-public-api.md  03-comprehensive-crate-guide.md  04-ci-docs-and-package-gates.md  PROMPT_01.md  PROMPT_02.md  PROMPT_03.md  PROMPT_04.md  README.md
prompts_interop/: 01-feature-and-full-triangular.md  02-triangular-dmatrix-conversions.md  03-structured-dmatrix-conversions.md  04-validation-and-tolerances.md  05-round-trip-and-oracle-tests.md  06-documentation-and-quality-gates.md
prompts_release/: 01-release-readiness-audit.md  02-license-msrv-and-metadata.md  03-release-candidate-changelog.md  04-package-and-docsrs-verification.md  05-publish-dry-run-and-final-gate.md  06-human-controlled-publication.md  07-post-publication-release-and-verification.md  README.md
prompts_tests/: PROMPT_01.md  PROMPT_02.md  PROMPT_03.md  PROMPT_04.md  PROMPT_05.md  PROMPT_06.md  PROMPT_07.md  PROMPT_08.md
src/: arithmetic.rs  backend.rs  conversions.rs  diagnostics.rs  eigen.rs  equilibration.rs  error.rs  expert_solve.rs  factorization.rs  formatting.rs  generalized_reduction.rs  hermitian.rs  lib.rs  lower.rs  nalgebra_interop.rs  norms.rs  rank_updates.rs  scalar.rs  simple_solve.rs  spd.rs  storage.rs  symmetric.rs  triangular.rs  tridiagonal.rs  upper.rs
tests/: inverse_api.rs  nalgebra_conversion_validation.rs  nalgebra_full_triangular.rs  (+3 more)
(+15 files in other folders)
