[package]
name = "matrixpacked"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Packed structured matrices with BLAS and LAPACK integration"
repository = "https://github.com/evnekdev/matrixpacked"
documentation = "https://docs.rs/matrixpacked"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["matrix", "linear-algebra", "blas", "lapack", "scientific"]
categories = ["science", "mathematics"]
publish = ["crates-io"]
exclude = [
    "/.github/",
    "/cargo",
    "/prompts/",
    "/prompts_docs/",
    "/prompts_interop/",
    "/prompts_release/",
    "/prompts_tests/",
    "/RELEASE_CHECKLIST.md",
]

[dependencies]
num-complex = "0.4"
num-traits  = "0.2"
lapack      = "0.20"
blas        = "0.23"

[dependencies.nalgebra]
version = "0.35"
optional = true
default-features = false
features = ["std"]

[features]
default = []
nalgebra-interop = ["dep:nalgebra"]
openblas-static = ["dep:openblas-src"]
intel-mkl-static = ["dep:intel-mkl-src", "intel-mkl-src/mkl-static-lp64-seq"]

[package.metadata.docs.rs]
features = ["nalgebra-interop"]

[dependencies.openblas-src]
version = "0.10"
optional = true
features = ["static", "cblas"]

[dependencies.intel-mkl-src]
version = "0.8"
optional = true
default-features = false

[dev-dependencies]
nalgebra = { version = "0.35", default-features = false, features = ["std"] }
proptest = "1.11"
rand = "0.10"
rand_chacha = "0.10"

[[example]]
name = "nalgebra_lower_conversion"
required-features = ["nalgebra-interop"]

[[example]]
name = "nalgebra_upper_conversion"
required-features = ["nalgebra-interop"]

[[example]]
name = "nalgebra_symmetric_conversion"
required-features = ["nalgebra-interop"]

[[example]]
name = "nalgebra_hermitian_conversion"
required-features = ["nalgebra-interop"]

[[example]]
name = "nalgebra_spd_conversion"
required-features = ["nalgebra-interop"]
